# FinBox

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_demo.py
doc/: 00-glossary.md  01-overview.md  02-architecture.md  03-time-and-turns.md  04-world-and-geography.md  05-agents.md  06-roles.md  07-machine-learning.md  08-economy-and-ledger.md  09-markets-and-trading.md  10-industry-and-production.md  11-finance-and-instruments.md  12-politics-and-government.md  13-players-and-multiplayer.md  14-api-reference.md  15-data-model.md  16-configuration-and-initialization.md  README.md
sim/: README.md  calibrate_prices.py  checks.py  household.py  supply.py  verify_prices.py
src/finbox/: __init__.py  demo.py
src/finbox/agents/: __init__.py  scripted.py
src/finbox/core/: __init__.py  enums.py  errors.py  fixed.py  ids.py  rng.py  time.py
src/finbox/domain/: __init__.py  finance.py  margin.py  naming.py  needs.py  production.py
src/finbox/engine/: __init__.py  margin.py  replay.py  skeleton.py
src/finbox/gateway/: __init__.py  buffer.py  server.py
src/finbox/init/: __init__.py  config.py  genesis.py
src/finbox/ledger/: __init__.py  conservation.py  journal.py  ledger.py  types.py
src/finbox/market/: __init__.py  auction.py  types.py
tests/: test_aggregate.py  test_auction.py  test_determinism.py  test_engine.py  test_finance.py  test_fixed.py  test_gateway.py  test_ids.py  test_ledger.py  test_margin.py  test_market_engine.py  test_ml.py  test_needs.py  test_politics.py  test_rng.py  test_serialize.py  test_time.py  test_validation.py  test_world.py
(+12 files in other folders)
