[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finbox"
version = "0.0.1"
description = "FinBox: deterministic turn-based multi-agent economic simulation engine"
requires-python = ">=3.12"
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "hypothesis>=6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
